samples/_failures_safe/1761517948_3e1ff4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_224cee10.c: In function ‘main’:
./samples/SAFE/__tmp_224cee10.c:167:9: error: expected declaration or statement at end of input
  167 |         free_graph(graph);
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_224cee10.c:167:9: error: expected declaration or statement at end of input
